--- a/sass/elements/_lists.scss
+++ b/sass/elements/_lists.scss
@@ -23,3 +23,25 @@ dt {
 dd {
 	margin: 0 1.5em 1.5em;
 }
+
+ul {
+	list-style: none;
+	margin: 1.5rem 2rem;
+}
+
+li {
+	/* https://codepen.io/mtclmn/pen/OPQmbx */
+	position: relative;
+}
+
+li:after {
+	content: "";
+	height: 6px;
+	width: 6px;
+	background: rgba(0, 0, 0, 1);
+	display: block;
+	position: absolute;
+	transform: rotate(45deg);
+	top: 0.5rem;
+	left: -1rem;
+}
