Try li color changes

--- a/sass/elements/_lists.scss
+++ b/sass/elements/_lists.scss
@@ -45,3 +45,11 @@ ul li:before {
 	top: 0.5rem;
 	left: -1rem;
 }
+ul li:nth-child(n+3):before {
+	background: rgba(0, 0, 0, 0.5);
+}
+
+ul li:nth-child(n+2):before {
+	background: rgba(0,0,0,1);
+}
+
